--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="eventos.js"></script>
+    <script src="eventos.js" defer></script>
 </head>
 <body>
     <div id="container">
-        <button onclick="alert('Hola!')">Saludar!</button>
+        <button id="button">Saludar!</button>
     </div>
     
 </body>
